# mdemg

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .claudeignore  .env.example  .gitignore  .golangci.yml  2026-01-16-daily-log.md  AGENT_HANDOFF.md  AUTO_CLAUDE_BUG_REPORT.md  CHANGELOG.md  CLAUDE.md  CMS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_ISSUE.md  HANDOFF.md  Makefile  README.md  SECURITY.md  VISION.md  benchmark_megatron_run1.py  docker-compose.yml  generate_spec_from_output.py  go.mod  go.sum  process_benchmark_run2.py  repo-main-readme.md  start-here.md  start-mdemg.sh
docs/: scrap.md  (+22 more)
docs/lang-parser/lang-parse-spec/upts/: CHANGELOG.md  PARSER_GAPS.md  PARSER_IMPLEMENTATION_GUIDE.md  PARSER_ROADMAP.md  PARSER_STATUS.md  README.md  TREE_SITTER_5_LANG_FIX.md  TREE_SITTER_GRAMMAR_FIX.md  UPTS_SUMMARY.md  pyproject.toml
docs/lang-parser/lang-parse-spec/upts/fixtures/: c_test_fixture.c  cpp_test_fixture.cpp  csharp_test_fixture.cs  cuda_test_fixture.cu  cypher_test_fixture.cypher  dockerfile_test_fixture.dockerfile  go_test_fixture.go  graphql_test_fixture.graphql  ini_test_fixture.env  java_test_fixture.java  json_test_fixture.json  kotlin_test_fixture.kt  lua_test_fixture.lua  makefile_test_fixture.mk  markdown_test_fixture.md  openapi_test_fixture.yaml  protobuf_test_fixture.proto  python_test_fixture.py  rust_test_fixture.rs  scraper_markdown_test_fixture.md  shell_test_fixture.sh  sql_test_fixture.sql  terraform_test_fixture.tf  toml_test_fixture.toml  typescript_test_fixture.ts  xml_test_fixture.xml  yaml_test_fixture.yaml
(+1648 files in other folders)
